# autotool_tutorial

./: .gitignore  AUTHORS  Makefile.am  README  configure  configure.ac  configure.scan  del  libcdddb.sh  tool
include/: Makefile.am  minus.h  plus.h  times.h
man/: Makefile  Makefile.am  example.8
src/: Makefile.am  minus.c  plus.c
src/.deps/: test.Po
src/main/: test.c
src/main/.deps/: test.Po
src/minus/: Makefile.am
src/plus/: Makefile.am
src/times/: Makefile.am  times.c
