#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([math], [1.0], [xxx.com])
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([src], [src/plus], [src/times], [src/minus])
AC_CONFIG_HEADERS([config.h])
# Checks for programs.
AC_PROG_CC

# Checks for libraries.

AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_MKDIR_P
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 src/Makefile
                 src/minus/Makefile
                 src/plus/Makefile
                 src/times/Makefile])
AC_OUTPUT
